--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
-  "@react-spring/three": "^9.7.5",
-  "@react-three/fiber": "^8.13.7",
-  "@shadergradient/react": "^2.0.24",
-  "next": "15.2.2",
-  "react": "^18.0.0",
-  "react-dom": "^18.0.0",
-  "shadergradient": "^1.3.5",
-  "three": "^0.174.0"
+    "@react-spring/three": "^9.7.5",
+    "@react-three/fiber": "^8.13.7",
+    "@shadergradient/react": "^2.0.24",
+    "next": "^15.3.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "shadergradient": "^1.3.5",
+    "three": "^0.174.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
