--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "tailwindcss@latest install"
   },
   "dependencies": {
     "@react-spring/three": "^9.7.5",
@@ -24,6 +25,6 @@
     "@types/three": "^0.174.0",
     "eslint": "^9",
     "eslint-config-next": "15.2.2",
-    "tailwindcss": "^4"
+    "tailwindcss": "^4.1.3"
   }
 }
