--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "postinstall": "npx tailwindcss install"
+    "lint": "next lint"
   },
   "dependencies": {
     "@react-spring/three": "^9.7.5",
