--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
     "shadergradient": "^1.3.5",
     "three": "^0.174.0"
   },
+  "optionalDependencies": {
+  "@tailwindcss/oxide-linux-x64-gnu": "^4.1.3",
+  "lightningcss-linux-x64-gnu": "^1.29.1"
+},
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
