--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
   "@tailwindcss/oxide-linux-x64-gnu": "^4.1.3",
   "lightningcss-linux-x64-gnu": "^1.29.1"
 },
+  "rules": {
+    "react/no-unescaped-entities": "off"
+  },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
