--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-spring/three": "^9.7.5",
     "@react-three/fiber": "^8.13.7",
     "@shadergradient/react": "^2.0.24",
+    "gray-matter": "^4.0.3",
     "next": "^15.3.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
@@ -19,9 +20,9 @@
     "three": "^0.174.0"
   },
   "optionalDependencies": {
-  "@tailwindcss/oxide-linux-x64-gnu": "^4.1.3",
-  "lightningcss-linux-x64-gnu": "^1.29.1"
-},
+    "@tailwindcss/oxide-linux-x64-gnu": "^4.1.3",
+    "lightningcss-linux-x64-gnu": "^1.29.1"
+  },
   "rules": {
     "react/no-unescaped-entities": "off"
   },
@@ -31,6 +32,7 @@
     "@types/three": "^0.174.0",
     "eslint": "^9",
     "eslint-config-next": "15.2.2",
+    "raw-loader": "^4.0.2",
     "tailwindcss": "^4.0.2"
   }
 }
