--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mdx-js/loader": "^3.1.0",
+    "@mdx-js/react": "^3.1.0",
+    "@next/mdx": "^15.3.0",
     "@react-spring/three": "^9.7.5",
     "@react-three/fiber": "^8.13.7",
     "@shadergradient/react": "^2.0.24",
